NEON-1848 Fixed a style issue in which the background of items in the newsfeed was being set to the wrong color in the Dark Purple theme.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -25,7 +25,6 @@
     .item {
         color: @mid-text-color;
         font-size: 13px;
-        background-color: @light-background;
         border: @main-border;
         border-top: 0px;
         -moz-box-sizing: border-box;
